--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 	<meta charset="UTF-8" />
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdn.jsdelivr.net/npm/splitting@1.0.5/dist/splitting.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
@@ -46,7 +50,7 @@
 		<div class="progress"></div>
 	</div>
 	<nav class="nav--bar">
-		<img class="logo" src="assets/images/Watch-logo.png" >
+		<img class="logo" src="assets/images/logo.png" >
 		<!-- <button class="button--navbar">BUY NOW</button> -->
 	</nav>
 
@@ -91,9 +95,42 @@
 			</div>
 		</section>
 
-		<footer>
-			<button class="button--footer">BACK TO TOP</button>
+		<footer class="footer01">
+			<div class="main-footer">
+				<div class="section1">
+					<img src="./assets/images/flogo.png" alt="logo">
+					<p>Conditions</p>
+					<p>Terms of Use</p>
+					<p>Our Services</p>
+					<button class="button-ctc">Contact Us</button>
+				</div>
+				<div class="section2">
+					<h3>CONTACT INFO</h3>
+					<p>2715 Ash Dr. San Jose,</p>
+					<p>South Dakota 83475</p>
+					<p><i class="fa-solid fa-phone"></i>+91XXXXXXXXXX</p>
+					<p><i class="fa-solid fa-envelope"></i>demo@reboot.in</p>
+				</div>
+				<div class="section3">
+					<h3>NEWSLETTER</h3>
+					<p>Subscribe to our newsletter to get the latest news and offers</p>
+					<input type="text" placeholder="Your Mail Here"><i class="fa-solid fa-arrow-right"></i>
+				</div>
+			</div>
 		</footer>
+
+		<section class="footer02">
+			<button class="button--footer"> &#8593;</button>
+		</section>
+
+		<section class="footer03">
+			<div class="divider"></div>			
+		</section>
+
+		<section class="footer04">">
+				<p>© 2024 Chronos. All rights reserved.</p>
+			</div>
+
 	</div>
 
 	<div id="webgi-canvas-container">
