--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Threejs Free Course Final Project - BY ANDERSON MANCINI</title>
+	<title>CHRONOS</title>
 	<meta name="description" content="Threejs demo landing page for product visualization using WEBGi">
 
 	<meta property="og:url" content="http://drill-webgi-tutorial.vercel.app">
