--- a/index.html
+++ b/index.html
@@ -95,7 +95,22 @@
 			</div>
 		</section>
 
-		<footer class="footer01">
+	</div>
+
+	<div id="webgi-canvas-container">
+		<canvas id="webgi-canvas"></canvas>
+		<button class="button--customize button--exit">EXIT</button>
+	</div>
+
+	<div class="customizer--container">
+		<ul class="strap--colors">
+			<li class="button--colors yellow"></li>
+			<li class="button--colors red"></li>
+			<li class="button--colors black"></li>
+		</ul>
+	</div>
+
+	<footer class="footer01">
 			<div class="main-footer">
 				<div class="section1">
 					<img src="./assets/images/flogo.png" alt="logo">
@@ -129,22 +144,7 @@
 
 		<section class="footer04">">
 				<p>© 2024 Chronos. All rights reserved.</p>
-			</div>
-
-	</div>
-
-	<div id="webgi-canvas-container">
-		<canvas id="webgi-canvas"></canvas>
-		<button class="button--customize button--exit">EXIT</button>
-	</div>
-
-	<div class="customizer--container">
-		<ul class="strap--colors">
-			<li class="button--colors yellow"></li>
-			<li class="button--colors red"></li>
-			<li class="button--colors black"></li>
-		</ul>
-	</div>
+		</section>
 
 	<script src="src/index.ts"></script>
 	
