--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 	<div class="container">
 		<section class="section first">
 			<div class="section--one--container">
-				<h1>Time.<br/>Elevated.</h1>
+				<h2>Time.<br/>Elevated.</h2>
 				<p>Experience the pinnacle of precision timekeeping. Crafted for those who value every second.</p>
-				<button class="button--hero">KNOW MORE</button>
+				<!-- <button class="button--hero">KNOW MORE</button> -->
 			</div>
 		</section>
 
