--- a/index.html
+++ b/index.html
@@ -85,14 +85,17 @@
         <section class="section fourth">
 			<div class="section--fourth--container">
 			   <div class="section--fourth--logo">
-				<h1>CHR</h1>
-				<h1>NOS</h1>
-			</div>
+				  <h1>CHR</h1>
+				  <h1>NOS</h1>
+			   </div>
 			
-			<div class="sub-title"><h2>Time. Mastered.</h2></div>
+			    <div class="sub-title"><h2>Time. Mastered.</h2></div>
 			
               	<!-- <button class="button--customize">CUSTOMIZE</button> -->
 			</div>
+
+			<div class="sub-titlem"><h2>Time. Mastered.</h2></div>
+
 		</section>
 
 	</div>
