--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 		</ul>
 	</div>
 
-	<footer>
+	<!-- <footer>
 		<p>© 2024 Reboot CAS</p>
-	</footer>
+	</footer> -->
 
 	<script src="src/index.ts"></script>
 	
