--- a/index.html
+++ b/index.html
@@ -105,13 +105,22 @@
 		<button class="button--customize button--exit">EXIT</button>
 	</div>
 
-	<div class="customizer--container">
-		<ul class="strap--colors">
-			<li class="button--colors yellow"></li>
-			<li class="button--colors red"></li>
-			<li class="button--colors black"></li>
-		</ul>
-	</div>
+	<footer class="footer">
+			<div class="left">
+				<p>Designed and Developed by</p>
+				<img src="./assets/images/desktoplogo.png" alt="Footer Logo">
+			</div>
+			<!-- <div class="right">
+				<p>Contact Details</p>
+				<p>Contact Number : +91 7057141513</p>
+				<p>Location:- Kothrud Pune 411038</p>
+				<p>Email ID:- sales@rebootcas.com</p>
+			</div>
+			<div class="social">
+				Socials
+				<img src="./assets/images/Vector.png" alt="linkin">
+			</div> -->
+	</footer>
 
 	<script src="src/index.ts"></script>
 	
