--- a/index.html
+++ b/index.html
@@ -110,16 +110,15 @@
 				<p>Designed and Developed by</p>
 				<img src="./assets/images/desktoplogo.png" alt="Footer Logo">
 			</div>
-			<!-- <div class="right">
-				<p>Contact Details</p>
+			<div class="right">
 				<p>Contact Number : +91 7057141513</p>
 				<p>Location:- Kothrud Pune 411038</p>
 				<p>Email ID:- sales@rebootcas.com</p>
 			</div>
 			<div class="social">
-				Socials
-				<img src="./assets/images/Vector.png" alt="linkin">
-			</div> -->
+				<p>Socials</p>
+				<a href="https://in.linkedin.com/company/reboot-consultancy-services"><img src="./assets/images/Vector.png" alt="linkin"></a>
+			</div>
 	</footer>
 
 	<script src="src/index.ts"></script>
